--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -305,7 +305,7 @@ map.on('load', function(){
         type: "geojson",
         // Point to GeoJSON data. This example visualizes all M1.0+ earthquakes
         // from 12/22/15 to 1/21/16 as logged by USGS' Earthquake hazards program.
-        data: "dashboards/layouts/hero-thirds/map.geojson",
+        data: "map.geojson",
         cluster: true,
         clusterMaxZoom: 14, // Max zoom to cluster points on
         clusterRadius: 5 // Radius of each cluster when clustering points (defaults to 50)
