--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -292,78 +292,54 @@ client.draw(queryy, document.getElementById("mycharttt"), {
 mapboxgl.accessToken = 'pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03ZmhweGNqZzAifQ.YCcLyhXq7MXpRJDXojNtCg';
 var map = new mapboxgl.Map({
     container: 'map',
-    style: 'mapbox://styles/mapbox/dark-v8',
-    center: [-103.59179687498357, 40.66995747013945],
-    zoom: 3,
+    style: 'mapbox://styles/mapbox/streets-v8',
+    center: [-96, 37.8],
+    zoom: 3
 });
 
-map.on('load', function(){
-
-    // Add a new source from our GeoJSON data and set the
-    // 'cluster' option to true.
-    map.addSource("earthquakes", {
-        type: "geojson",
-        // Point to GeoJSON data. This example visualizes all M1.0+ earthquakes
-        // from 12/22/15 to 1/21/16 as logged by USGS' Earthquake hazards program.
-        data: "map.geojson",
-        cluster: true,
-        clusterMaxZoom: 14, // Max zoom to cluster points on
-        clusterRadius: 100 // Radius of each cluster when clustering points (defaults to 50)
-    });
-
-    // Use the earthquakes source to create five layers:
-    // One for non-clustered markers, three for each cluster category,
-    // and one for cluster labels.
-    map.addLayer({
-        "id": "non-cluster-markers",
-        "type": "symbol",
-        "source": "earthquakes",
-        "layout": {
-            "icon-image": "marker-15"
+map.on('load', function () {
+    map.addSource("markers", {
+        "type": "geojson",
+        "data": {
+            "type": "FeatureCollection",
+            "features": [{
+                "type": "Feature",
+                "geometry": {
+                    "type": "Point",
+                    "coordinates": [-77.03238901390978, 38.913188059745586]
+                },
+                "properties": {
+                    "title": "Mapbox DC",
+                    "marker-symbol": "monument"
+                }
+            }, {
+                "type": "Feature",
+                "geometry": {
+                    "type": "Point",
+                    "coordinates": [-122.414, 37.776]
+                },
+                "properties": {
+                    "title": "Mapbox SF",
+                    "marker-symbol": "harbor"
+                }
+            }]
         }
     });
 
-    // Display the earthquake data in three layers, each filtered to a range of
-    // count values. Each range gets a different fill color.
-    var layers = [
-        [150, '#f28cb1'],
-        [20, '#f1f075'],
-        [0, '#51bbd6']
-    ];
-
-    layers.forEach(function (layer, i) {
-        map.addLayer({
-            "id": "cluster-" + i,
-            "type": "circle",
-            "source": "earthquakes",
-            "paint": {
-                "circle-color": layer[1],
-                "circle-radius": 18
-            },
-            "filter": i == 0 ?
-                [">=", "point_count", layer[0]] :
-                ["all",
-                    [">=", "point_count", layer[0]],
-                    ["<", "point_count", layers[i - 1][0]]]
-        });
-    });
-
-    // Add a layer for the clusters' count labels
     map.addLayer({
-        "id": "cluster-count",
+        "id": "markers",
         "type": "symbol",
-        "source": "earthquakes",
+        "source": "markers",
         "layout": {
-            "text-field": "{point_count}",
-            "text-font": [
-                    "DIN Offc Pro Medium",
-                    "Arial Unicode MS Bold"
-                ],
-            "text-size": 12
+            "icon-image": "{marker-symbol}-15",
+            "text-field": "{title}",
+            "text-font": ["Open Sans Semibold", "Arial Unicode MS Bold"],
+            "text-offset": [0, 0.6],
+            "text-anchor": "top"
         }
     });
+});
 
-   });
 </script>
 </body>
 </html>
