--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -309,7 +309,7 @@ map.on('load', function () {
                     "coordinates": [-77.03238901390978, 38.913188059745586]
                 },
                 "properties": {
-                    "title": "Mapbox DC",
+                    "title": "1200 kWhr/mth",
                     "marker-symbol": "monument"
                 }
             }, {
