--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -306,7 +306,7 @@ map.on('load', function () {
                 "type": "Feature",
                 "geometry": {
                     "type": "Point",
-                    "coordinates": [-77.03238901390978, 38.913188059745586]
+                    "coordinates": [46.5653, -66.4619]
                 },
                 "properties": {
                     "title": "1200 kWhr/mth",
