--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -309,7 +309,7 @@ map.on('load', function () {
                     "coordinates": [-66.4619, 46.5653]
                 },
                 "properties": {
-                    "title": "1200 kWhr/mth",
+                    "title": "1200 kWhr",
                     "marker-symbol": "monument"
                 }
             }, {
