--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -292,7 +292,7 @@ client.draw(queryy, document.getElementById("mycharttt"), {
 mapboxgl.accessToken = 'pk.eyJ1Ijoic2Vuc2l0IiwiYSI6ImNpZ2hwb2VlbTgzbjJ2OG03ZmhweGNqZzAifQ.YCcLyhXq7MXpRJDXojNtCg';
 var map = new mapboxgl.Map({
     container: 'map',
-    style: ''mapbox://styles/mapbox/basic-v8',
+    style: 'mapbox://styles/mapbox/basic-v8',
     center: [-96, 37.8],
     zoom: 3
 });
