--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -309,7 +309,7 @@ map.on('load', function () {
                     "coordinates": [-66.4619, 46.5653]
                 },
                 "properties": {
-                    "title": "1200 kWhr",
+                    "title": "1200",
                     "marker-symbol": "monument"
                 }
             }, {
@@ -319,8 +319,8 @@ map.on('load', function () {
                     "coordinates": [-122.414, 37.776]
                 },
                 "properties": {
-                    "title": "Mapbox SF",
-                    "marker-symbol": "harbor"
+                    "title": "900",
+                    "marker-symbol": "star-15"
                 }
             }]
         }
