--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -316,7 +316,7 @@ map.on('load', function () {
                 "type": "Feature",
                 "geometry": {
                     "type": "Point",
-                    "coordinates": [-122.414, 37.776]
+                    "coordinates": [-56.1304°, 106.3468°]
                 },
                 "properties": {
                     "title": "900",
