--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -316,11 +316,11 @@ map.on('load', function () {
                 "type": "Feature",
                 "geometry": {
                     "type": "Point",
-                    "coordinates": [-56.1304°, 106.3468°]
+                    "coordinates": [-56.1304, 106.3468]
                 },
                 "properties": {
                     "title": "900",
-                    "marker-symbol": "star-15"
+                    "marker-symbol": "star"
                 }
             }]
         }
