--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -310,13 +310,13 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "1200",
-                    "marker-symbol": "monument"
+                    "marker-symbol": "lightning"
                 }
             }, {
                 "type": "Feature",
                 "geometry": {
                     "type": "Point",
-                    "coordinates": [-56.1304, 106.3468]
+                    "coordinates": [-106.3468, 56.1304]
                 },
                 "properties": {
                     "title": "900",
