--- a/layouts/hero-thirds/index.html
+++ b/layouts/hero-thirds/index.html
@@ -310,7 +310,7 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "1200",
-                    "marker-symbol": "lightning"
+                    "marker-symbol": ""
                 }
             }, {
                 "type": "Feature",
@@ -320,7 +320,7 @@ map.on('load', function () {
                 },
                 "properties": {
                     "title": "900",
-                    "marker-symbol": "star"
+                    "marker-symbol": ""
                 }
             }]
         }
